feat: パラメータを詳細化
