# apps/api/src/main/java/dev/ymkz/demo/api/domain/FindBooksResponse.java
@@ -4,27 +4,29 @@ import dev.ymkz.demo.core.domain.model.Book;
 import dev.ymkz.demo.core.domain.value.BookStatus;
 import dev.ymkz.demo.core.domain.value.Pagination;
 import io.swagger.v3.oas.annotations.media.Schema;
+import java.time.LocalDateTime;
 import java.util.List;
 
 @Schema(name = "FindBooksResponse")
 public record FindBooksResponse(ResponsePagination pagination, List<ResponseHit> hits) {
 
   record ResponsePagination(
-      @Schema(example = "0") int offset,
-      @Schema(example = "100") int limit,
-      @Schema(example = "1") int total) {
+      @Schema(description = "取得開始位置", example = "0") int offset,
+      @Schema(description = "取得数", example = "100") int limit,
+      @Schema(description = "検索ヒット総数", example = "1") int total) {
   }
 
   record ResponseHit(
-      @Schema(example = "1") long id,
-      @Schema(example = "9784873115658") String isbn,
-      @Schema(example = "リーダブルコード") String title,
-      @Schema(example = "2640") Integer price,
-      @Schema(example = "PUBLISHED") BookStatus status,
-      @Schema(example = "1") int authorId,
-      @Schema(example = "Dustin Boswell") String authorName,
-      @Schema(example = "1") int publisherId,
-      @Schema(example = "O'Reilly") String publisherName) {
+      @Schema(description = "書籍ID", example = "1") long id,
+      @Schema(description = "ISBN-13", example = "9784873115658") String isbn,
+      @Schema(description = "タイトル", example = "リーダブルコード") String title,
+      @Schema(description = "価格", example = "2640") Integer price,
+      @Schema(description = "ステータス", example = "PUBLISHED") BookStatus status,
+      @Schema(description = "出版日時", example = "2025-01-23T01:23:45.000Z") LocalDateTime publishedAt,
+      @Schema(description = "著者ID", example = "1") int authorId,
+      @Schema(description = "著者名", example = "Dustin Boswell") String authorName,
+      @Schema(description = "出版社ID", example = "1") int publisherId,
+      @Schema(description = "出版社名", example = "O'Reilly") String publisherName) {
 
     private static ResponseHit of(Book book) {
       return new ResponseHit(
@@ -33,6 +35,7 @@ public record FindBooksResponse(ResponsePagination pagination, List<ResponseHit>
           book.title(),
           book.price(),
           book.status(),
+          book.publishedAt(),
           book.authorId(),
           book.authorName(),
           book.publisherId(),
