# apps/core/src/main/java/dev/ymkz/demo/core/gateway/datasource/BookEntity.java
@@ -12,11 +12,11 @@ public record BookEntity(
     String title,
     @Nullable Integer price,
     BookStatus status,
+    @Nullable LocalDateTime publishedAt,
     int authorId,
     String authorName,
     int publisherId,
     String publisherName,
-    @Nullable LocalDateTime publishedAt,
     LocalDateTime createdAt,
     @Nullable LocalDateTime updatedAt,
     @Nullable LocalDateTime deletedAt) {
@@ -28,11 +28,11 @@ public record BookEntity(
         entity.title,
         entity.price,
         entity.status,
+        entity.publishedAt,
         entity.authorId,
         entity.authorName,
         entity.publisherId,
         entity.publisherName,
-        entity.publishedAt,
         entity.createdAt,
         entity.updatedAt,
         entity.deletedAt);
